2007-07-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: The character immediately following
	a bare |hcro| was discarded.  Fix handling of
	entity references in attribute values.

2007-07-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (main and trailin end phases): Token
	types |DOCTYPE|, |comment|, |end-of-file|, and |<html>| are 
	factored out.  Error types |in html:#DOCTYPE|
	and |after html:#DOCTYPE| are merged
	into |DOCTYPE in the middle|.  |</frameset>|
	in fragment parsing mode changed the
	insertion mode.

2007-07-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |$phase| has been removed; The |trailing end|
	phase is now an insertion mode.  Treatments for white
	space character tokens were incorrect for some
	insertion modes.  An old |meta| case was not removed.

2007-07-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |meta| charset declaration extraction
	implemented (but changing the encoding is not yet:-).

2007-07-15  Wakaba  <wakaba@suika.fam.cx>

	* Charset/: New directory.

2007-07-15  Wakaba  <wakaba@suika.fam.cx>

	* H2H.pm: New Perl module (created from
	manakai's H2H.dis).

2007-07-15  Wakaba  <wakaba@suika.fam.cx>

	* XMLSerializer.pm: New Perl module (created from
	manakai's SimpleLS.dis).

2007-07-07  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |<!---x-->| was not processed correctly.

2007-07-01  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Report correct error message
	for |<body></div></body>|.

2007-07-01  Wakaba  <wakaba@suika.fam.cx>

	* HTMLTable.pm: An error description was incorrect.

2007-06-30  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Return |{term}| list.

2007-06-30  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: HTML5 revisions 961-966 (</p>, </br>,
	nested <nobr>, implied </tbody>, </tfoot>, and </thead>,
	and <title> outside of head).

2007-06-30  Wakaba  <wakaba@suika.fam.cx>

	* IMTChecker.pm: Report warning for unregistered
	and private types/subtypes.
