@@ -119,6 +119,7 @@
 </head>
 #errors
 /head;child element missing:title
+/head/meta/@charset;in XML:charset
 
 #data
 <head xmlns="http://www.w3.org/1999/xhtml">
@@ -209,6 +210,7 @@
 <title/>
 </head>
 #errors
+/head/meta/@charset;in XML:charset
 
 #data
 <head xmlns="http://www.w3.org/1999/xhtml">
@@ -217,6 +219,7 @@
 </head>
 #errors
 /head/meta;element not allowed
+/head/meta/@charset;in XML:charset
 
 #data
 <head xmlns="http://www.w3.org/1999/xhtml">
@@ -275,11 +278,13 @@
 #data
 <head xmlns="http://www.w3.org/1999/xhtml"><meta charset="us-ascii"/><base/><title></title></head>
 #errors
+/head/meta/@charset;in XML:charset
 
 #data
 <head xmlns="http://www.w3.org/1999/xhtml"><meta charset="us-ascii"/><title/><base/></head>
 #errors
 /head/base;element not allowed
+/head/meta/@charset;in XML:charset
 
 #data
 <head xmlns="http://www.w3.org/1999/xhtml"><title/><base/></head>
@@ -291,6 +296,7 @@
 #errors
 /head/base;element not allowed
 /head/meta;element not allowed
+/head/meta/@charset;in XML:charset
 
 #data
 <head xmlns="http://www.w3.org/1999/xhtml">
@@ -300,6 +306,7 @@
 </head>
 #errors
 /head/base;element not allowed
+/head/meta/@charset;in XML:charset
 
 #data
 <head xmlns="http://www.w3.org/1999/xhtml">
@@ -309,6 +316,7 @@
 </head>
 #errors
 /head/meta;element not allowed
+/head/meta/@charset;in XML:charset
 
 #data
 <head xmlns="http://www.w3.org/1999/xhtml">
@@ -318,6 +326,7 @@
 </head>
 #errors
 /head/meta;element not allowed
+/head/meta/@charset;in XML:charset
 
 #data
 <head xmlns="http://www.w3.org/1999/xhtml">
@@ -343,6 +352,7 @@
 </head>
 #errors
 /head/meta;element not allowed
+/head/meta/@charset;in XML:charset
 
 #data
 <head xmlns="http://www.w3.org/1999/xhtml">
@@ -351,6 +361,7 @@
 <title/>
 </head>
 #errors
+/head/meta/@charset;in XML:charset
 
 #data
 <base href="http://www.w3.org/" xmlns="http://www.w3.org/1999/xhtml"></base>
@@ -395,20 +406,24 @@
 #data
 <meta charset="us-ascii" xmlns="http://www.w3.org/1999/xhtml"></meta>
 #errors
+/meta/@charset;in XML:charset
 
 #data
 <meta charset="us-ascii" xmlns="http://www.w3.org/1999/xhtml"> </meta>
 #errors
+/meta/@charset;in XML:charset
 
 #data
 <meta charset="us-ascii" xmlns="http://www.w3.org/1999/xhtml">a</meta>
 #errors
 /meta/"a";character not allowed
+/meta/@charset;in XML:charset
 
 #data
 <meta charset="us-ascii" xmlns="http://www.w3.org/1999/xhtml"><p/></meta>
 #errors
 /meta/p;element not allowed
+/meta/@charset;in XML:charset
 
 #data
 <style type="text/css" xmlns="http://www.w3.org/1999/xhtml"></style>
