@@ -1,7 +1,7 @@
 1..780
 # Running under perl version 5.008007 for linux
-# Current time local: Mon Jul 16 15:52:36 2007
-# Current time GMT:   Mon Jul 16 06:52:36 2007
+# Current time local: Mon Jul 16 16:28:39 2007
+# Current time GMT:   Mon Jul 16 07:28:39 2007
 # Using Test.pm version 1.25
 ok 1
 ok 2
