@@ -1,7 +1,7 @@
-1..640
+1..774
 # Running under perl version 5.008007 for linux
-# Current time local: Mon Jul 16 15:52:48 2007
-# Current time GMT:   Mon Jul 16 06:52:48 2007
+# Current time local: Mon Jul 16 16:28:51 2007
+# Current time GMT:   Mon Jul 16 07:28:51 2007
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
