@@ -1,5 +1,13 @@
 2007-07-16  Wakaba  <wakaba@suika.fam.cx>
 
+	* content-model-1.dat, content-model-2.dat: Add "in XML:charset"
+	error for test data that has |charset| in XML context.
+
+	* content-model-2.dat: Test data for "in XML:charset", "in XML:lang",
+	and "in HTML:xml:lang" are added.
+
+2007-07-16  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML-tokenizer.t: It now requires newer version
 	of JSON.pm due to the broken handling for utf8 string
 	of older version.  Test data files |test3.test|
